# virtual-assistant-backend

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: update-submodules.yml
notebooks/: agent_manager.ipynb  auto_agent.ipynb  code_generation.ipynb  langchain_qa.ipynb  python_repl_agent.ipynb  search_agent.ipynb  vector_database.ipynb  zapier_react_agent.ipynb
virtual_assistant/agents/: __init__.py  builder.py  chat_agent.py  manager.py  parser.py
virtual_assistant/chains/bash/: base.py
virtual_assistant/chains/chat/: chat.py
virtual_assistant/chains/voice/: base.py
virtual_assistant/chat/: chat.py  prompt.py
virtual_assistant/latest_chat/: base.py
virtual_assistant/prompts/: input.py
virtual_assistant/repl/: base.py
virtual_assistant/tools/: __init__.py  browsing.py
virtual_assistant/utilities/: __init__.py  google_serper.py  milvus_client.py  pinecone_client.py
virtual_assistant_chain/chains/bash/: base.py  prompt.py
virtual_assistant_chain/chains/chat/: chat.py  chat_type_template.py
virtual_assistant_chain/chat/: chat.py  chat_type_template.py
virtual_assistant_chain/server/: bash_servicer.py  chat_servicer.py  client.py  server.py
web/: db.sqlite3
web/api/: admin.py  apps.py  urls.py  views.py
web/api/callbacks/: streaming_chat_message.py  streaming_queue.py
web/api/consumers/: chat_consumer.py
web/api/migrations/: 0001_initial.py
web/api/models/: __init__.py  chat_history.py  chat_message.py  conversation.py  document.py  user.py
web/api/serializers/: __init__.py  chat_message.py  conversation.py  document.py
web/api/utils/: __init__.py  document.py
web/api/views/: __init__.py  bash_executor_view.py  chat_message_view.py  chat_view.py  conversation_view.py  document_view.py  login.py
web/web/: asgi.py  celery.py  settings.py  urls.py
