[tool.poetry]
name = "virtual-assistant-chain"
version = "0.0.0"
description = ""
authors = ["al002 <al002@disroot.org>"]
readme = "README.md"
packages = [{include = "virtual_assistant_chain"}]

[tool.poetry.dependencies]
python = "~3.9.16"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
django = "^4.1.7"
djangorestframework = "^3.14.0"
langchain = "^0.0.128"
openai = "^0.27.2"
python-dotenv = "^1.0.0"
channels = "^4.0.0"
daphne = "^4.0.0"
asgiref = "^3.6.0"
django-cors-headers = "^3.14.0"
google-search-results = "^2.4.2"
pymilvus = "^2.2.4"
celery = "^5.2.7"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
